test/tests/stages/9_functions/valid/no_arguments/variable_shadows_function.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CFunDecl: 
                CFunctionDeclaration: 
                  TIdentifier: foo
                  List[0]: 
                  None: 
                  FunType: 
                    TULong: 67108864
                    TULong: 67108864
                    List[0]: 
                    Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: foo
                      List[0]: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CGreaterThan: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[2]: 
                      CD: 
                        CVarDecl: 
                          CVariableDeclaration: 
                            TIdentifier: foo
                            CSingleInit: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 3
                                None: 
                              None: 
                            Int: 
                            None: 
                      CS: 
                        CExpression: 
                          CAssignment: 
                            None: 
                            CVar: 
                              TIdentifier: x
                              None: 
                            CBinary: 
                              CAdd: 
                              CVar: 
                                TIdentifier: x
                                None: 
                              CVar: 
                                TIdentifier: foo
                                None: 
                              None: 
                            None: 
                None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: x
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 4
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
