test/tests/stages/9_functions/invalid_declarations/extra_credit/call_label_as_function.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CLabel: 
                TIdentifier: a
                CExpression: 
                  CAssignment: 
                    None: 
                    CVar: 
                      TIdentifier: x
                      None: 
                    CBinary: 
                      CAdd: 
                      CVar: 
                        TIdentifier: x
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: a
                  List[0]: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: x
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
